# pypermission

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  conftest.py  package-lock.json  pyproject.toml  setup.py  test.md
assets/: .gitattributes
ci/: init_test_db.py  secrets.py
doc/: readme_example.py
docker/: .env.template  docker-compose.yaml
docs/: Dockerfile  RBAC_ANSI.md  RBAC_NIST.md  api_reference.rst  conf.py  conftest.py  examples.rst  guides.rst  hooks.py  index.rst  introduction.rst  k8s.yaml  mkdocs.yml
docs/_assets/: prolog.rst
docs/_static/: custom.css  custom_pygments.css  mermaid_config.json  pygments.css  pygments_orig.css
docs/diagrams/: gantt.mmd  introduction_graph.mmd
docs/docs/: ansi.md  definitions.md  faq.md  nist.md  permission_design_guide.md  quick_start.md  roadmap.md
docs/docs/api/: models.md  policy.md  rbac.md  role.md  subject.md  util.md
docs/docs/guide/: index.md
docs/overrides/: main.html
docs/overrides/partials/: copyright.html
docs/overrides/partials/integrations/analytics/: custom.html
docs/pages/: addendum.rst  chat_rooms.yaml  examples.rst  introduction.rst  introduction.yaml  quick_start.rst  rbac_rest_api_json.rst  readme.rst  role_api.rst  standardization.rst  subject_api.rst
docs/pages/addendum/: outlook.rst
docs/pages/examples/: chat_rooms.yaml  group_api.rst  persistency.rst  quick_start.rst  rbac_rest_api_json.rst  role_api.rst  subject_api.rst
docs/pages/guides/: rbac_rest_api_json.rst
docs/pages/standardization/: RBAC_ANSI.md  RBAC_NIST.md  rbac_ansi.rst  rbac_nist.rst
examples/: visualisation.ipynb
src/pypermission/: __init__.py  core.py  db.py  demo.py  error.py  exc.py  json.py  models.py  orm.py  rbac.py  typing.py  util.py
src/pypermission/example/: app.py  models.py  orm.py
src/pypermission/example/service/: group.py  user.py
src/pypermission/json/: __init__.py  core.py
src/pypermission/serial/: __init__.py  core.py
src/pypermission/service/: policy.py  role.py  subject.py
src/pypermission/sqlalchemy/: __init__.py  core.py  models.py  service.py
src/pypermission/util/: exception_handling.py  plot.py  role.py
src/pypermission/yaml/: __init__.py  core.py
src/rbac/: __init__.py  exc.py  models.py
src/rbac/example/: app.py  models.py
src/rbac/example/service/: group.py  user.py
src/rbac/service/: role.py  subject.py
src/rbac/util/: plot.py  role.py
tests/: README.md  __init__.py  conftest.py  helpers.py  save_file.yaml  test_doc_example.py  test_get_info.py  test_get_permissions.py  test_permission.py  test_policy.py  test_rbac.py  test_readme.py  test_readme.yaml  test_role.py  test_subject.py  test_util_plot.py  test_util_role.py
tests/json/: test_entities.py  test_persistency.py  test_registration.py
tests/serial/: save_file.json  save_file.yaml  save_file_types.json  save_file_types.yaml  test_consistency.py  test_entities.py  test_get_info.py  test_persistency.py  test_registration.py  test_type_persistency.py
tests/sqlalchemy/: test_basic_api.py  test_get_info.py
tests/yaml/: test_persistency.py
