[project]
name = "PyPermission"
version = "0.3.0"
description = "The python RBAC authorization library for projects where SQLAlchemy is a valid option."
readme = "README.md"
authors = [
    { name = "Jendrik A. Potyka", email = "jpotyka@digon.io" },
    { name = "Fabian A. Preiss", email = "fpreiss@digon.io" },
]
maintainers = [
    { name = "Jendrik A. Potyka", email = "jpotyka@digon.io" },
    { name = "Fabian A. Preiss", email = "fpreiss@digon.io" },
]
license = "LGPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = ["sqlalchemy>=2.0.43"]

[project.optional-dependencies]
postgres = ["psycopg>=3.2.10"]
util = ["networkx>=3.5", "plotly>=6.3.1"]

[project.urls]
Documentation = "https://pypermission.digon.io"
Repository = "https://gitlab.com/DigonIO/pypermission"
Issues = "https://gitlab.com/DigonIO/pypermission/-/issues"
Changelog = "https://gitlab.com/DigonIO/pypermission/-/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage>=7.10.7",
    "ipykernel>=6.30.1",
    "isort>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-coverage>=2.0.0",
    "mkdocs-material[imaging]>=9.6.21",
    "mkdocstrings[python]>=0.30.1",
    "pdbpp>=0.11.7",
    "plotly-stubs>=0.0.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-markdown-docs>=0.9.0",
    "ruff>=0.14.4",
    "sqlalchemy[mypy]>=2.0.43",
    "types-networkx>=3.5.0.20251001",
]
postgres = ["psycopg>=3.2.10"]
util = ["networkx>=3.5", "plotly>=6.3.1"]

[tool.black]
target-version = ['py313']

[tool.isort]
py_version = 313
profile = "black"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
